compiling_error.txt
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c: In function 'openFile':
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:14:11: warning: passing argument 1 of 'fputc' makes integer from pointer without a cast [-Wint-conversion]
     fputc(insert,fichier);
           ^
In file included from C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:2:0:
c:\mingw\include\stdio.h:638:41: note: expected 'int' but argument is of type 'char *'
 _CRTIMP __cdecl __MINGW_NOTHROW  int    fputc (int, FILE *);
                                         ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c: At top level:
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:20:1: warning: data definition has no type or storage class
 fclose(fichier);
 ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:20:1: warning: type defaults to 'int' in declaration of 'fclose' [-Wimplicit-int]
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:20:1: warning: parameter names (without types) in function declaration
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c: In function 'dht11_read_val':
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:27:20: error: 'HIGH' undeclared (first use in this function)
   uint8_t lststate=HIGH;
                    ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:27:20: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:35:3: warning: implicit declaration of function 'pinMode' [-Wimplicit-function-declaration]
   pinMode(DHT11PIN,OUTPUT);
   ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:35:20: error: 'OUTPUT' undeclared (first use in this function)
   pinMode(DHT11PIN,OUTPUT);
                    ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:36:3: warning: implicit declaration of function 'digitalWrite' [-Wimplicit-function-declaration]
   digitalWrite(DHT11PIN,LOW);
   ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:36:25: error: 'LOW' undeclared (first use in this function)
   digitalWrite(DHT11PIN,LOW);
                         ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:37:3: warning: implicit declaration of function 'delay' [-Wimplicit-function-declaration]
   delay(18);
   ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:39:3: warning: implicit declaration of function 'delayMicroseconds' [-Wimplicit-function-declaration]
   delayMicroseconds(40);
   ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:40:20: error: 'INPUT' undeclared (first use in this function)
   pinMode(DHT11PIN,INPUT);
                    ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:45:11: warning: implicit declaration of function 'digitalRead' [-Wimplicit-function-declaration]
     while(digitalRead(DHT11PIN)==lststate){
           ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:67:21: error: invalid initializer
     char chaine[] = ("H = %d.%d\nT = %d.%d\n",dht11_val[0],dht11_val[1],dht11_val[2],dht11_val[3]);
                     ^
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c: In function 'main':
C:\Users\Francois\Documents\GitHub\Domotic\dht11.c:80:6: warning: implicit declaration of function 'wiringPiSetup' [-Wimplicit-function-declaration]
   if(wiringPiSetup()==-1) exit(1);
      ^
